--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/dist
-/tmp
+**/dist
+/**/tmp
+/**/pdf
+/**/word
 /out-tsc
 /bazel-out
 
